# KMA-ML-HW

HW1/: .gitignore  part1.py  part2.ipynb  part2.py  pyproject.toml
