[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["Nazariy Bachynsky <nazariybp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
click = "^8.1.7"
notebook = "^7.2.2"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
